kube/charts/demo-resources/ci/test-result.yaml
---
# Source: demo-resources/templates/loader.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-release
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-resources
---
# Source: demo-resources/templates/loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-resources
  template:
    metadata:
      labels:
        app: demo-resources
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: test-release
        - secretRef:
            name: test-release
        image: nginx:1.27
        name: app
        ports:
        - containerPort: 80
      serviceAccountName: test-release
---
# Source: demo-resources/templates/loader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-release
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo-resources.example.com
    http:
      paths:
      - backend:
          service:
            name: test-release
            port:
              number: 80
        path: /
        pathType: Prefix
